plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.wevo'
version = '0.0.1-SNAPSHOT'
description = 'Wevo-backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	springAiVersion = '2.0.0'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-postgresql'
	testRuntimeOnly 'com.h2database:h2'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'

    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // DB Migration
    // Spring Boot 4의 Flyway 자동 구성을 활성화해 애플리케이션 시작 전에 마이그레이션을 적용한다.
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-database-postgresql'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // JWT (JJWT)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // Bean Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // AI
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
}

tasks.named('test') {
	useJUnitPlatform {
        excludeTags 'nvidia-integration', 'nvidia-evaluation', 'postgres-schema'
	}
}

tasks.register('postgresSchemaTest', Test) {
    description = 'Runs the opt-in empty PostgreSQL Flyway and Hibernate validation test.'
    group = 'verification'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        includeTags 'postgres-schema'
    }
    shouldRunAfter tasks.named('test')
}

tasks.register('nvidiaIntegrationTest', Test) {
    description = 'Runs opt-in NVIDIA Trial API integration tests.'
    group = 'verification'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        includeTags 'nvidia-integration'
    }
    shouldRunAfter tasks.named('test')
}

tasks.register('nvidiaEvaluationTest', Test) {
    description = 'Runs budgeted opt-in NVIDIA Trial quality evaluation.'
    group = 'verification'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        includeTags 'nvidia-evaluation'
    }
    shouldRunAfter tasks.named('test')
}
